<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorBlack"
    android:orientation="vertical"
    tools:context="creditcardui.rsantosh.com.creditcardui.CreditCardUi">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:layout_weight="1">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/card_balance"
        android:textColor="@color/colorWhite"
        android:id="@+id/textView_Card_Balance"
        android:layout_gravity="center_vertical"
        android:layout_weight="1"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText_Card_Balance"
        android:background="@color/colorWhite"
        android:layout_gravity="center_vertical"
        android:cursorVisible="true"
        android:maxLines="1"
        android:layout_weight="1"/>

</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/yearly_interest"
            android:textColor="@color/colorWhite"
            android:id="@+id/textView_Yearly_Interest"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editText_Yearly_Interest"
            android:background="@color/colorWhite"
            android:layout_gravity="center_vertical"
            android:cursorVisible="true"
            android:maxLines="1"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/minimum_payment"
            android:textColor="@color/colorWhite"
            android:id="@+id/textView_Minimum_Payment"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editText_minimum_payment"
            android:background="@color/colorWhite"
            android:layout_gravity="center_vertical"
            android:cursorVisible="true"
            android:maxLines="1"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/final_card_balance"
            android:textColor="@color/colorWhite"
            android:id="@+id/textView_final_card_balance"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editText_final_card_balance"
            android:background="@color/colorWhite"
            android:layout_gravity="center_vertical"
            android:cursorVisible="true"
            android:maxLines="1"
            android:enabled="false"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/months_remaining"
            android:textColor="@color/colorWhite"
            android:id="@+id/textView_months_remaining"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editText_months_remaining"
            android:background="@color/colorWhite"
            android:layout_gravity="center_vertical"
            android:enabled="false"
            android:cursorVisible="true"
            android:maxLines="1"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/interest_paid"
            android:textColor="@color/colorWhite"
            android:id="@+id/textView_interest_paid"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editText_interest_paid"
            android:background="@color/colorWhite"
            android:layout_gravity="center_vertical"
            android:enabled="false"
            android:cursorVisible="true"
            android:maxLines="1"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/compute"
        android:id="@+id/button_compute"
        android:layout_gravity="top"
        android:layout_weight="1"/>

       <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Clear"
            android:id="@+id/button_clear"
           android:layout_gravity="bottom"
            android:layout_weight="1"/>


    </LinearLayout>
</LinearLayout>